add laptop breakpoint

--- a/modules/nested-tabs/assets/scss/frontend.scss
+++ b/modules/nested-tabs/assets/scss/frontend.scss
@@ -249,7 +249,7 @@
 }
 
 // Laptop.
-@media (min-width: $screen-laptop-next) {
+@media (min-width: $screen-laptop-min) {
 	@include hide-mobile-n-tabs-(laptop);
 }
 
