Expending existing area for editing columns, sections and containers by one click interaction [HTS-55]

--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -122,6 +122,14 @@
 			background-size: cover;
 		}
 	}
+
+	.elementor-click-area {
+		height: 100%;
+		width: 100%;
+		top: 0;
+		left: 0;
+		position: absolute;
+	}
 }
 
 .elementor-widget-wrap,
