--- a/modules/nested-tabs/assets/scss/frontend.scss
+++ b/modules/nested-tabs/assets/scss/frontend.scss
@@ -37,6 +37,7 @@
 	--n-tabs-title-height: initial;
   	--n-tabs-title-text-display: flex;
   	--n-tabs-title-text-align-items: center;
+	--n-tabs-title-font-size: 1rem;
 
 	--n-tabs-title-justify-content: center;
 	--n-tabs-title-align-items: center;
@@ -53,8 +54,6 @@
 	--n-tabs-icon-color: var( --e-global-color-secondary, var( --n-tabs-color-secondary-fallback ) );
 	--n-tabs-icon-color-hover: var( --n-tabs-title-color-hover );
 	--n-tabs-icon-color-active: #{$white};
-	--n-tabs-icon-size: initial;
-  	--n-tabs-svg-icon-size: 1rem;
 	--n-tabs-icon-gap: 5px;
 
 	max-width: 100%; /* Fix issue with new created n-tabs inside n-tabs with overflow */
@@ -110,6 +109,7 @@
 				width: 100%;
 				display: var( --n-tabs-title-text-display );
 			  	align-items: var( --n-tabs-title-text-align-items );
+			  	font-size: var( --n-tabs-title-font-size );
 			}
 
 			&:hover {
@@ -143,11 +143,12 @@
 				&.e-active {
 
 					> i {
-						font-size: var( --n-tabs-icon-size );
+					  	font-size: var( --n-tabs-icon-size, var( --n-tabs-title-font-size ) );
 					}
 
-					svg {
-						height: var( --n-tabs-svg-icon-size );
+				  	svg {
+						width: var( --n-tabs-icon-size, var( --n-tabs-title-font-size ) );
+						height: var( --n-tabs-icon-size, var( --n-tabs-title-font-size ) );
 					}
 
 					&:empty {
